add recipe book to weapontable

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -63,3 +63,7 @@ protected net.minecraft.data.ShapelessRecipeBuilder field_200495_c #count
 protected net.minecraft.data.ShapelessRecipeBuilder field_200498_f #group
 protected net.minecraft.data.ShapelessRecipeBuilder field_200496_d #ingredients
 protected net.minecraft.data.ShapelessRecipeBuilder func_200481_a(Lnet/minecraft/util/ResourceLocation;)V #validate
+
+public net.minecraft.client.gui.recipebook.RecipeBookGui func_193003_g(Z)V #updateCollections
+public net.minecraft.client.gui.recipebook.RecipeBookGui field_191913_x #currentTab
+public net.minecraft.client.gui.recipebook.RecipeBookGui field_193962_q #searchBar
