--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ major_version=6
 minor_version=0
 #Dependencies/Optional Libraries
 jei_version=6.0.0.2
-guideapi_version=1.15.2-2.2.0-alpha+20200504-0006
+guideapi_version=1.15.2-2.2.0-beta.1
