Minion screen and container Minion armor layer Modify minion data client sync.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -45,6 +45,7 @@ public-f net.minecraft.world.gen.feature.jigsaw.JigsawPattern field_214952_d # f
 public net.minecraft.world.gen.feature.jigsaw.JigsawManager$Assembler
 
 public net.minecraft.client.gui.screen.SleepInMultiplayerScreen func_146418_g()V #wakeFromSleep
+public net.minecraft.inventory.container.PlayerContainer field_200829_h # ARMOR_SLOT_TEXTURES
 
 public-f net.minecraft.data.AdvancementProvider field_204283_d # advancements
 public net.minecraft.client.gui.screen.Screen font # font
