Update forge and guideapi

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.daemon=false
 org.gradle.jvmargs=-Xmx3G
 #29.07.14 17:00
 minecraft_version=1.15.2
-forge_version=31.1.0
+forge_version=31.2.0
 mcp_mappings=20200212-1.15.1
 mcp_channel=snapshot
 main_version=1
@@ -10,4 +10,4 @@ major_version=6
 minor_version=0
 #Dependencies/Optional Libraries
 jei_version=6.0.0.2
-guideapi_version=1.15.2-2.2.0-beta.1
+guideapi_version=1.15.2-2.2.0
