make zombie entities ignore vampire villager

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -68,3 +68,10 @@ protected net.minecraft.data.ShapelessRecipeBuilder func_200481_a(Lnet/minecraft
 public net.minecraft.client.gui.recipebook.RecipeBookGui func_193003_g(Z)V #updateCollections
 public net.minecraft.client.gui.recipebook.RecipeBookGui field_191913_x #currentTab
 public net.minecraft.client.gui.recipebook.RecipeBookGui field_193962_q #searchBar
+
+##villager sensor
+protected net.minecraft.entity.merchant.villager.VillagerEntity field_213786_bQ #MEMORY_TYPES
+protected net.minecraft.entity.merchant.villager.VillagerEntity field_213787_bR #SENSOR_TYPES
+protected net.minecraft.entity.ai.brain.sensor.VillagerHostilesSensor field_220991_b #field_220991_b
+protected net.minecraft.entity.ai.brain.sensor.VillagerHostilesSensor func_220988_c(Lnet/minecraft/entity/LivingEntity;)Z #func_220988_c
+protected net.minecraft.entity.ai.brain.sensor.VillagerHostilesSensor func_220987_a(Lnet/minecraft/entity/LivingEntity;Lnet/minecraft/entity/LivingEntity;)Z #func_220987_a
